# gnf-core-foundry

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
api/: __init__.py  endpoints.py
configs/: r21_template.yaml  r33_template.yaml
docker/: Dockerfile
docs/: architecture_overview.md  getting_started.md
schemas/: biomarker_schema.json  cohort_schema.json  milestone_schema.yaml
src/: __init__.py
src/evaluation/: __init__.py  convergent_validity.py  responsiveness.py
src/feature_engine/: __init__.py  kinematic_features.py  spectral_features.py  temporal_features.py
src/ingestion/: __init__.py  data_loader.py
src/milestone_runner/: __init__.py  gating.py  reporting.py  runner.py
src/preprocessing/: __init__.py  normalization.py  signal_cleaning.py
src/stability/: __init__.py  bland_altman.py  icc.py  mdc.py  test_retest.py
src/validation/: __init__.py  data_quality.py  schema_validator.py
tests/: __init__.py  conftest.py  test_bland_altman.py  test_icc.py  test_milestone_runner.py
